Beggining of Type Script

--- a/API/appsettings.Development.json
+++ b/API/appsettings.Development.json
@@ -6,6 +6,9 @@
     }
   },
   "ConnectionStrings": {
-    "DefaultConnection": "Data Source=reactivities.db"
-  }
+        "DefaultConnection": "Data Source=reactivities.db"
+  },
+  "TokenKey": "super secret key"
 }
+
+
